--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1417,9 +1417,9 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  padding: 8px;
+  /*padding: 8px;*/
   line-height: 1.42857143;
-  vertical-align: top;
+  /*vertical-align: top;*/
   border-top: 1px solid #ddd;
 }
 .table > thead > tr > th {
